# chip8-rust

./: Cargo.toml  LICENSE.md  README.md
roms/: maze.txt
src/: audio.rs  cpu.rs  main.rs  util.rs  window.rs
