[package]
name = "chip8-rust"
version = "1.0.0"
authors = ["Naman Sood <mail@nsood.in>"]
edition = "2018"
description = "CHIP-8 interpreter in Rust"
repository = "https://github.com/tendstofortytwo/chip8-rust"
readme = "README.md"
license = "MIT"

[dependencies]
minifb = "0.15.1"
rodio = "0.15"
rand = "0.7"
